--- a/index.html
+++ b/index.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>67070065</title>
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
-    <header>
-        <div class="nav-bar">
-            <nav class = "nav-bar-item">
-                <p>Nine</p>
-            </nav>
-        </div>
-    </header>
-    <div class="body-main-profile">
-        <div class="profile">
-            <div class="profile-header">
-                <img src="./assets/ij3k.png" alt="">
-            </div>
-            <div class="profile-body">
-                <h1>Thanabodee / Angkuldee</h1>
-            </div>
-            <div class="media-box">
-                <div class="social-img">
-                    <img src="./assets/ig.png" alt="">
-                    <img src="./assets/fb.png" alt="">
-                    <img src="./assets/twitter.png" alt="">
-                </div>
-                <div class="social-name">
-
-                </div>
-            </div>
-        </div>
-    </div>
 <body>
+    <header>
+        <h1>Hello, I am Nine nice2meetu :D</h1>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="about" class="section">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>My name's Thanabodee Angkuldee (67070065) study at IT KMITL</p>
+            <img src="./assets/ij3k.png" alt="My Profile Picture" class="profile-pic">
+        </div>
+    </section>
+    <section id="contact" class="section">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <b>Facebook</b>
+            <button class="cta-button"><a href="https://www.facebook.com/ninestevf" target="_blank">Click here!</a></button>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-container">
+            <p>For ITF-Lab only!</p>
+        </div>
+    </footer>
 </body>
 </html>
