Lab14 add some script ,html, styles files

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <b>Facebook</b>
             <button class="cta-button"><a href="https://www.facebook.com/ninestevf" target="_blank">Click here!</a></button>
         </div>
+        <a href="./lab14.html"><button>Go to Lab14</button></a>
     </section>
     <footer>
         <div class="footer-container">
