add background to lab13

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             </ul>
         </nav>
     </header>
-    <section id="about" class="section">
+    <section class="section">
         <div class="container">
             <h2>About Me</h2>
             <p>My name's Thanabodee Angkuldee (67070065) study at IT KMITL</p>
             <img src="./assets/ij3k.png" alt="My Profile Picture" class="profile-pic">
         </div>
     </section>
-    <section id="contact" class="section">
+    <section class="section">
         <div class="container">
             <h2>Contact Me</h2>
             <b>Facebook</b>
